# ncoreparser

./: .env.example  .env.example.sh  .gitignore  .pylintrc  LICENSE  Makefile  Pipfile  Readme.md  Readme.rst  dev-requirements.txt  ncoreparser.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.py  test_ncoreparser.py  tox.ini
.github/workflows/: module_test.yml  publish_package.yml  python-publish.yml  pythonapp.yml  unit_test.yml
ncoreparser/: __init__.py  client.py  client_async.py  constant.py  data.py  error.py  errors.py  models.py  parser.py  torrent.py  types.py  util.py
src/ncoreparser/: __init__.py  client.py  client_async.py  data.py  error.py  parser.py  torrent.py  types.py  util.py
tests/: Readme.md  manual.py  manual_async.py  test_client.py  test_util.py
tests/test_module/: requirements.txt  test.py  tox.ini
tests/test_unit/: test_client.py  test_util.py
