[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "ncoreparser"
version = "4.0.1"
description = "Package to download from ncore.pro"
authors = [
  { name="Aron Radics", email="aron.radics.jozsef@gmail.com" }
]
license = "MIT"
readme = "Readme.md"
dependencies = [
  "httpx>=0.26.0",
]
requires-python = ">=3.9"


[project.urls]
Repository = "https://github.com/radaron/ncoreparser.git"


[project.optional-dependencies]
dev = [
  "pytest",
  "pylint",
  "black",
  "mypy",
  "tox",
  "tox-gh"
]

[tool.black]
line-length = 120

[tool.mypy]
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
