[project]
name = "ncoreparser"
version = "4.5.2"
description = "Package to download from ncore.pro"
authors = [
  { name="Aron Radics", email="aron.radics.jozsef@gmail.com" }
]
license = "MIT"
readme = "Readme.md"
dependencies = [
  "httpx>=0.26.0",
]
requires-python = ">=3.9"

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[project.urls]
Repository = "https://github.com/radaron/ncoreparser.git"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.mypy]
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
