[project]
name = "ncoreparser"
version = "4.5.3"
description = "Package to download from ncore.pro"
authors = [
  { name="Aron Radics", email="aron.radics.jozsef@gmail.com" }
]
license = "MIT"
readme = "Readme.md"
dependencies = [
  "httpx>=0.26.0",
]
requires-python = ">=3.9"

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "ty",
]

[project.urls]
Repository = "https://github.com/radaron/ncoreparser.git"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.ty.rules]
unresolved-reference = "error"
unresolved-import = "error"
unresolved-attribute = "error"
invalid-assignment = "error"
invalid-argument-type = "error"
invalid-return-type = "error"
missing-argument = "error"

possibly-missing-attribute = "error"
possibly-missing-import = "error"
possibly-unresolved-reference = "error"

redundant-cast = "error"
undefined-reveal = "error"
